--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "core-js": "^2.5.4",
     "npm-check": "^5.9.0",
     "rxjs": "^6.0.0",
+    "tar": "^4.4.8",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.3",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "^6.1.8",
     "@angular/language-service": "^6.1.8",
