--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.8",
     "@angular/router": "^6.1.8",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.15",
     "npm-check": "^5.9.0",
     "rxjs": "^6.0.0",
     "tar": "^4.4.8",
