--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.15",
     "npm-check": "^5.9.0",
     "rxjs": "^6.0.0",
+    "set-value": "^3.0.1",
     "tar": "^4.4.8",
     "zone.js": "~0.8.26"
   },
