--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.8",
     "core-js": "^2.5.4",
     "lodash": "^4.17.15",
+    "mixin-deep": "^2.0.1",
     "npm-check": "^5.9.0",
     "rxjs": "^6.0.0",
     "set-value": "^3.0.1",
